...
  headerProps,
  InviteDialog,
  JoinRequests,
  MemberList,
  orgId,
  PendingInvites,
  title = 'Members',
  titleProps,
  wrapperProps
}: MembersPageShellProps<TOrgId>) => (
  <div {...wrapperProps} className={cn('space-y-6', className, wrapperProps?.className)}>
    <div {...headerProps} className={cn('flex items-center justify-between', headerClassName, headerProps?.className)}>
      <h1 {...titleProps} className={cn('text-2xl font-bold', titleProps?.className)}>
...
