...
          <Pressable className='rounded-md bg-secondary px-3 py-2' testID='pagination-link'>
            <Text>Pagination</Text>
          </Pressable>
        </Link>
        <Link asChild href='/profile'>
          <Pressable className='rounded-md bg-secondary px-3 py-2' testID='profile-link'>
            <Text>Profile</Text>
          </Pressable>
        </Link>
      </View>
      {items.map(b => (
        <View className='rounded-md border border-border p-3' key={b._id}>
          <Link asChild href={`/${b._id}`}>
...
