appId: dev.noboil.org
---
- runFlow: onboarding-flow.yaml
- assertVisible: "Projects"
- tapOn: "Wiki"
- waitForAnimationToEnd
- tapOn: "Members"
- waitForAnimationToEnd
- assertVisible: "Members"
- tapOn: "Settings"
- waitForAnimationToEnd
- assertVisible: "Settings"
- assertVisible: "Organization"
- tapOn: "Projects"
- waitForAnimationToEnd
- assertVisible: "Projects"
- tapOn: "Wiki"
- waitForAnimationToEnd
- tapOn: "Members"
- waitForAnimationToEnd
- tapOn: "Projects"
- waitForAnimationToEnd
- assertVisible: "Projects"
- tapOn: "Settings"
- waitForAnimationToEnd
- assertVisible: "Settings"
- tapOn: "Projects"
- waitForAnimationToEnd
- assertVisible: "Projects"
