appId: dev.noboil.blog
---
- runFlow: login.yaml
- tapOn: "Profile"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Set Up Profile"
    timeout: 10000
- assertVisible: "Your name"
- assertVisible: "Light"
- assertVisible: "System"
- assertVisible: "Dark"
- assertVisible: "Notifications"
- scrollUntilVisible:
    element: "Save"
    direction: DOWN
    timeout: 5000
- assertVisible: "Save"
- swipe:
    direction: DOWN
    duration: 500
- tapOn: "Your name"
- inputText: "Maestro Tester"
- hideKeyboard
- scrollUntilVisible:
    element: "Save"
    direction: DOWN
    timeout: 5000
- tapOn: "Save"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Edit Profile"
    timeout: 10000
- tapOn: "Posts"
- waitForAnimationToEnd
- tapOn: "Profile"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Edit Profile"
    timeout: 10000
- tapOn: "Dark"
- waitForAnimationToEnd
- tapOn: "Notifications"
- waitForAnimationToEnd
- scrollUntilVisible:
    element: "Save"
    direction: DOWN
    timeout: 5000
- tapOn: "Save"
- waitForAnimationToEnd
- tapOn: "Posts"
- waitForAnimationToEnd
- tapOn: "Profile"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Edit Profile"
    timeout: 10000
